--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <div>
-  <button id="btn-copy-text">Copy this text 👇🏻</button>
+  <button id="btn-copy-text">Copy this text</button>
   <p id="text-to-copied">Text to be copied</p>
 </div>
 
